<resources>
    <string name="app_name">Shakti</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_mail">Mail</string>
    <string name="menu_call">Call</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_contact">Connect</string>
    <string name="menu_sapne">Sapne</string>
    <string name="menu_shakti">Shakti</string>
    <string name="menu_admin">Administrator</string>
    <string name="menu_developer">Developer</string>
</resources>